# cut_a

./: .gitignore  README.md  pyproject.toml
configs/examples/: cut_a_default.env
cut_a_lab/: __init__.py
data/combined/: tokenizer_windows_mean.summary.json
data/smoke/: tokenizer_windows_smoke.jsonl
docs/: data-contracts.md  pararel_experiment_ssh_report.md  r_tuning_multidataset_plan.md
docs/methods/: delta_entropy.md  entropy.md  icr.md
scripts/: build_r_tuning_inference_cache.py  build_r_tuning_method_inputs.py  layer_ablation_analysis.py  plot_layer_ablation.py  relabel_inference_cache.py  run_complementarity_validation.py  run_disagreement_analysis.py  run_disagreement_analysis_finegrained.py  run_pararel_analysis.py  run_pararel_transfer_eval.py  run_r_tuning_mlp_eval.py  weight_analysis.py
scripts/experiments/: compare_models.py  feature_correctness_spectrum.py  make_feature_subset.py  neighbor_layer_propagation.py  pararel_icr_common.py  run_third_model_layer_spectrum.py  save_normalized_features.py  self_consistency_sign.py  unify_pararel_full_ood.py  validate_sign_flip.py
src/cut_a_lab/: __init__.py
src/cut_a_lab/analysis/: __init__.py  complementarity_validation.py  visualize.py  (+5 more)
tests/: test_disagreement_analysis_finegrained.py  test_evaluation.py  test_feature_views.py  test_layer_spectrum_summary.py  test_method_loaders.py  test_pararel_fullood_unify.py  test_prediction_rows.py  test_r_tuning_datasets.py  test_r_tuning_inference.py  test_r_tuning_method_build.py  test_r_tuning_reporting.py  test_self_consistency.py  test_training_skips.py
(+41 files in other folders)
