[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cut-a-lab"
version = "0.1.0"
description = "Method-oriented experiment framework for Cut A style span classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "torch>=2.0.0",
  "transformers>=4.45.0",
  "matplotlib>=3.7.0",
]

[project.scripts]
cut-a-lab = "cut_a_lab.core.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
